--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -677,7 +677,7 @@ opacity: 0.5s;
 }
 .el:nth-child(2) .el__bg:before {
   transition-delay: 0.3s;
-  background-image: url('/img/Certificado\ CoderHouse.jpg');
+  background-image: url('/img/Certificado-CoderHouse.jpg');
   background-position:4rem ;
   background-repeat:no-repeat;
   background-size:contain;
@@ -699,7 +699,10 @@ opacity: 0.5s;
 }
 .el:nth-child(3) .el__bg:before {
   transition-delay: 0.2s;
-  background-image: url('https://images.unsplash.com/photo-1505852679233-d9fd70aff56d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80');
+  background-image: url('/img/certificado-Js-Coder.jpg');
+  background-position:center ;
+  background-repeat:no-repeat;
+  background-size:contain;
 }
 .el:nth-child(4) {
   transform: translate3d(315.625%, 0, 0);
@@ -718,27 +721,12 @@ opacity: 0.5s;
 }
 .el:nth-child(4) .el__bg:before {
   transition-delay: 0.3s;
-  background-image: url('https://images.unsplash.com/photo-1542640244-7e672d6cef4e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80');
+  background-image: url('/img/certificado-react.jpg');
+  background-position:right;
+  background-repeat:no-repeat;
+  background-size:contain;
 }
-.el:nth-child(5) {
-  transform: translate3d(420.8333333333%, 0, 0);
-  transform-origin: 470.8333333333% 50%;
-}
-.cont.s--el-active .el:nth-child(5):not(.s--active) {
-  transform: scale(0.5) translate3d(420.8333333333%, 0, 0);
-  opacity: 0;
-  transition: transform 0.95s, opacity 0.95s;
-}
-.el:nth-child(5) .el__inner {
-  transition-delay: 0.4s;
-}
-.el:nth-child(5) .el__bg {
-  transform: translate3d(-76.8%, 0, 0);
-}
-.el:nth-child(5) .el__bg:before {
-  transition-delay: 0.4s;
-  background-image: url('https://images.unsplash.com/photo-1543310465-f4d3ca5a2a25?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80');
-}
+
 .el:hover .el__bg:after {
   opacity: 0;
 }
