--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -904,7 +904,7 @@ footer h3{
     display: none;
   }
   .contenedor{
-      background-image: url(/img/teclado.jpg);
+      background-image: url(img/teclado.jpg);
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -1085,7 +1085,7 @@ footer h3{
   display: none;
 }
 .contenedor{
-    background-image: url(img/teclado.jpg);
+    background-image: url(../img/teclado.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1279,7 +1279,7 @@ footer h3{
     display: none;
   }
   .contenedor{
-      background-image: url(/img/teclado.jpg);
+      background-image: url(../img/teclado.jpg);
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -1465,7 +1465,7 @@ footer h3{
   }
   
   .contenedor{
-    background-image: url(/img/teclado.jpg);
+    background-image: url(../img/teclado.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
