--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -165,50 +165,18 @@ margin-bottom: 5px;
     margin-left: 20px;
     color: #21ebff;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 0.9rem;
     text-transform: uppercase;
     transition: 0.5s;
+    font-weight: bold;
+    font-family:'Kumbh Sans', sans-serif;
 
 }
 
-a::before {
-  content: "";
-  position: absolute;
-  top: -1px;
-  left: -1px;
-  width: 5px;
-  height: 5px;
-  border-top: 2px solid #21ebff;
-  border-left: 2px solid #21ebff;
-  transition: 0.5s;
-  transition-delay: 0.5s;
-}
-
-a::after {
-    
-  position: absolute;
-  bottom: -1px;
-  right: -1px;
-  width: 5px;
-  height: 5px;
-  border-bottom: 2px solid #21ebff;
-  border-right: 2px solid #21ebff;
-  transition: 0.5s;
-  transition-delay: 0.5s;
-}
-
-a:hover::before,
-a:hover::after {
-    width: 100%;
-    height: 100%;
-    transition-delay: 0s;
-}
-
-a:hover {
-  background: #21ebff;
-  color: #000;
-  box-shadow: 0 0 50px #21ebff;
-  transition-delay: 0.5s;
+.nav-contenedor a:hover{
+  color: #9511b9;
+  background-color: rgba(190, 189, 187, 0.103);
+  border-radius: 50%;
 }
 
 .contenedor{
@@ -566,6 +534,7 @@ opacity: 0.5s;
   color: #fff;
   text-transform: uppercase;
   font-size: 18px;
+  
 }
 .el__content {
   z-index: -1;
@@ -589,6 +558,7 @@ opacity: 0.5s;
   text-transform: uppercase;
   font-size: 40px;
   color: #fff;
+  background-color: grey;
 }
 .el__close-btn {
   z-index: -1;
@@ -1162,9 +1132,32 @@ footer h3{
 }
 
  .card{
-  width: 37%;
-  
+  width: 35%;
+  height: auto;
+  justify-content: center;
+  align-content: flex-end;
+
 }
+
+.card-title{
+  font-size: 1.1rem;
+  font-weight: bold;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+.card-text{
+  height: 290px;
+  text-align: center;
+  background-color: #b9a98f1c;
+  border-radius: 5px;
+
+}
+
+.card a{
+  margin-top: 20px;
+}
+
 .card video{
   display: none;
 }
@@ -1199,6 +1192,11 @@ footer h3{
 .cont{
   width: 100%;
   height: 65vh;
+}
+
+.el__overflow{
+  width: 80%;
+  margin-left: 20px;
 }
 
 .contenedor-tit{
