--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -1635,7 +1635,7 @@ footer h3{
 
 
 /* Largue devices ( landscape desktop, 1025px and 1200px) */
-@media only screen and (min-width: 1025px) and (max-width: 1200px) {
+@media only screen and (min-width: 1025px) and (max-width: 1200px) /* {
   .nombre{ 
     display: flex;
     flex-direction: row;
@@ -1655,13 +1655,12 @@ footer h3{
     margin-top: 15px;
   
   }
-  
+
   .clock{
     display: none;
    
   }
   
-
   .subtitulo{
     margin: auto;
     width: 50%;
