--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -435,8 +435,8 @@ opacity: 0.5s;
 .cont {
   position: relative;
   overflow: hidden;
-  height: 100vh;
   width: 100%;
+  height: 95vh;
   padding: 80px 70px;
   background-color: rgba(2, 2, 2, 0);
 }
@@ -1630,6 +1630,7 @@ align-content: center;
   #contactos{
     width: 100%;
     height: auto;
+    
   }
 
   .contenedor-tit{
@@ -1649,23 +1650,15 @@ align-content: center;
   .form-contacto{
     display: block;
     margin: auto;
-    width:60%;
+    width:70%;
     height: auto;
     text-align: center;
     font-size: 1.2rem;
     padding: 10px 5px;
     margin-top: 55px;
+    margin-bottom: 20px;
   }
   
-  .icons-redes{
-    width: 100%;
-    justify-content: space-around;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    margin: 15px 0px;
-
-    
-  }
 
   #descargar-cv p{
     font-size: 1.2rem;
