--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -196,6 +196,7 @@ body {
   background-color: #fc9a08;
   flex-wrap: wrap;
   margin-top: 30px;
+  margin-bottom: 0px;
 }
 
 .img-teclado {
@@ -218,9 +219,9 @@ body {
 }
 
 .intro {
-  color: rgb(49, 49, 49);
+  color: rgb(247, 240, 240);
   margin-top: 30px;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   line-height: 35px;
   width: 50%;
   font-family: "Kumbh Sans", sans-serif;
@@ -268,23 +269,13 @@ body {
 }
 
 #proyectos {
-  display: flex;
-  width: 100%;
-  height: auto;
-  flex-wrap: wrap;
-  background-image: linear-gradient(
-    45deg,
-    hsl(0deg 0% 4%) 0%,
-    hsl(27deg 11% 6%) 11%,
-    hsl(28deg 15% 7%) 22%,
-    hsl(28deg 17% 8%) 33%,
-    hsl(28deg 18% 9%) 44%,
-    hsl(28deg 19% 10%) 56%,
-    hsl(28deg 21% 11%) 67%,
-    hsl(28deg 23% 13%) 78%,
-    hsl(28deg 24% 14%) 89%,
-    hsl(28deg 25% 15%) 100%
-  );
+  height: 600px;
+  margin: 0;
+  display: grid;
+  grid-template-rows: 500px 100px;
+  grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
+  align-items: center;
+  justify-items: center;
 }
 
 .proyecto-titulo {
@@ -295,54 +286,146 @@ body {
   height: 60px;
   border-end-end-radius: 10px;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .proyecto-titulo h2 {
   color: #f3d1a9;
   font-size: 2.5rem;
   text-align: end;
-  padding: 5px;
   font-family: "Kumbh Sans", sans-serif;
   font-weight: bold;
 }
 
-.contenedor-card {
-  display: flex;
-  width: 100%;
-  height: auto;
-}
-
-.card {
-  width: 50%;
-  height: auto;
-  margin: 35px 30px;
-}
-
-.card-img-top {
-  height: auto;
-  width: 100%;
-}
-
 .card-body {
-  background-color: #3a2634;
+  height: 300px;
+  background-color: #2b1e276c;
   text-align: center;
+  margin-top: 10px;
 }
 
 .card-body h4 {
-  color: rgb(197, 195, 193);
+  color: rgb(250, 248, 247);
+  background-color: #8b969c44;
+  width: 50%;
+  margin: auto;
 }
 
 .card-text {
-  color: rgb(197, 195, 193);
+  width: 90%;
+  color: rgb(253, 253, 252);
+  margin: auto;
+  margin-top: 15px;
+}
+
+.item a{
+background-color: rgb(5, 5, 5);
+color: white;
+margin-top: 50px;
+width: 200px;
+}
+
+main#carousel {
+  grid-row: 1 / 2;
+  grid-column: 1 / 8;
+  width: 100vw;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transform-style: preserve-3d;
+  perspective: 700px;
+  margin-top: 50px;
+  --items: 5;
+  --middle: 3;
+  --position: 1;
+  
+  margin-bottom: 40px;
+}
+
+div.item {
+  position: absolute;
+  width: 450px;
+  height: 550px;
+  margin-top: 40px;
+  background-color: coral;
+  --r: calc(var(--position) - var(--offset));
+  --abs: max(calc(var(--r) * -1), var(--r));
+  transition: all 0.25s linear;
+  transform: rotateY(calc(-10deg * var(--r)))
+    translateX(calc(-300px * var(--r)));
+  z-index: calc((var(--position) - var(--abs)));
+}
+
+div.item:nth-of-type(1) {
+  --offset: 1;
+  background-color:rgb(228, 183, 100);
+}
+div.item:nth-of-type(2) {
+  --offset: 2;
+  background-color: #3b3437;
+}
+div.item:nth-of-type(3) {
+  --offset: 3;
+  background-color: #beb642cc;
+}
+div.item:nth-of-type(4) {
+  --offset: 4;
+  background-color: #133142;
+}
+div.item:nth-of-type(5) {
+  --offset: 5;
+  background-color: #e9ff70;
+}
+
+input:nth-of-type(1) {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(1):checked ~ main#carousel {
+  --position: 1;
+}
+
+input:nth-of-type(2) {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(2):checked ~ main#carousel {
+  --position: 2;
+}
+
+input:nth-of-type(3) {
+  grid-column: 4 /5;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(3):checked ~ main#carousel {
+  --position: 3;
+}
+
+input:nth-of-type(4) {
+  grid-column: 5 / 6;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(4):checked ~ main#carousel {
+  --position: 4;
+}
+
+input:nth-of-type(5) {
+  grid-column: 6 / 7;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(5):checked ~ main#carousel {
+  --position: 5;
 }
 
 #contenedor-skills {
-  background-repeat: no-repeat;
-  background-size: contain;
   display: flex;
   flex-wrap: wrap;
   width: 100%;
   height: 800px;
+  margin-top: 10px;
+
 }
 
 .skills-titulo {
@@ -384,6 +467,7 @@ body {
   -webkit-animation: shadow-pop-tr 0.9s cubic-bezier(0.47, 0, 0.745, 0.715) both;
   animation: shadow-pop-tr 0.9s cubic-bezier(0.47, 0, 0.745, 0.715) both;
 }
+
 .icon-efecto {
   width: 20%;
   height: auto;
@@ -765,6 +849,7 @@ body {
 .form-contacto {
   display: flex;
   flex-direction: column;
+  align-content: center;
   width: 50%;
   height: auto;
   margin-left: 250px;
@@ -775,9 +860,20 @@ body {
   border-width: 10px;
 }
 
-.contacto__formulario__contenedor {
+.contacto__formulario__contenedor input {
   display: flex;
+  width: 100%;
+  height: auto;
   flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.contacto__formulario__contenedorTex{
+  display: flex;
+  width: 100%;
+  height: auto;
+  flex-direction: column;
+  margin-top: 20px;
   color: white;
 }
 
@@ -806,11 +902,14 @@ body {
 }
 
 .form-contacto button {
+  display: flex;
   background-color: #3a2634;
   width: 40%;
   height: 40px;
+  justify-content: center;
+  align-content: center;
   margin: auto;
-  margin-bottom: 10px;
+  margin-top: 20px;
   border-radius: 10px;
 }
 
@@ -818,7 +917,8 @@ body {
   color: #21ebff;
   font-weight: bold;
   font-family: "Courier New", Courier, monospace;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  text-align: center;
 }
 
 #descargar-cv {
@@ -1003,35 +1103,33 @@ footer h3 {
     color: white;
   }
 
-  .contenedor-card {
-    width: 100%;
+  .carousel {
+    width: 50%;
+    padding: 10px 10px;
     height: auto;
     flex-wrap: wrap;
     justify-content: center;
-  }
-
-  .card {
-    width: 33%;
-    height: auto;
-    display: flex;
   }
 
   .card-title {
     font-size: 1.1rem;
     font-weight: bold;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
 
   .card-text {
-    height: 390px;
+    width: 80%;
+    height: auto;
     text-align: center;
-    background-color: #b9a98f1c;
+    background-color: #eeebe648;
     border-radius: 5px;
+    font-size: 1.2rem;
+    color: rgb(0, 0, 0);
   }
 
-  .card a {
-    margin-top: 20px;
+  .item a {
+    margin-top: 30px;
   }
 
   .card video {
@@ -1100,10 +1198,17 @@ footer h3 {
     display: block;
     margin: auto;
     width: 90%;
+    height: auto;
     text-align: center;
     font-size: 1.2rem;
     padding: 5px 5px;
     margin-top: 35px;
+  }
+
+  .form-contacto button{
+    height: auto;
+    margin-bottom: 15px;
+
   }
 
   .icons-redes {
@@ -1111,12 +1216,12 @@ footer h3 {
     height: auto;
     justify-content: space-around;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     margin-top: 15px;
   }
 
   .icons-redes span {
-    text-align: center;
+    text-align: justify;
     padding: 10px 5px;
   }
 
@@ -1240,6 +1345,7 @@ footer h3 {
     background-color: #46454457;
     margin-bottom: 15px;
   }
+
   .intro p {
     width: 100%;
     height: auto;
@@ -1255,6 +1361,7 @@ footer h3 {
     margin-top: 2px;
     filter: none;
   }
+
   .header__img:hover {
     opacity: 1;
     overflow: visible;
@@ -1284,6 +1391,7 @@ footer h3 {
   .card {
     width: 37%;
   }
+
   .card video {
     display: none;
   }
@@ -1292,37 +1400,51 @@ footer h3 {
     width: 100%;
     height: auto;
   }
+
   .skills-titulo {
     margin: auto;
     margin-top: 10px;
     border-radius: 5px;
     background-color: #cb67e785;
   }
+
   .skills-titulo h2 {
     text-align: center;
     font-size: 2.5rem;
     color: white;
   }
+
   .icon-efecto {
     align-items: center;
   }
+
   #certificados h2 {
     width: 60%;
     margin-top: 50px;
     color: #ffffff;
     background-color: rgba(104, 89, 240, 0.651);
   }
+
   .cont {
     width: 100%;
-    height: 65vh;
+    height: 85vh;
+    padding: 5px 5px;
+  }
+
+  #contactos{
+    width: 100%;
+    height: auto;
+    margin-top: 30px;
   }
 
   .contenedor-tit {
     display: flex;
     justify-content: center;
     width: 80%;
-    margin-top: 10px;
+    margin: 10px 0px;
+
   }
+
   .contacto-tit {
     width: 80%;
     margin: auto;
@@ -1334,24 +1456,38 @@ footer h3 {
     display: block;
     margin: auto;
     width: 95%;
+    height: 420px;
     text-align: center;
     font-size: 1.2rem;
     padding: 5px 5px;
-    margin-top: 55px;
+
+  }
+
+  .contacto__formulario__contenedorTex{
+    width: 100%;
+    height: 150px;
+  }
+
+  #contactos button{
+    height: auto;
   }
 
   .icons-redes {
     width: 100%;
-    justify-content: space-around;
+    height: auto;
     flex-direction: row;
-    flex-wrap: nowrap;
-    margin-top: 15px;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    margin-bottom: 20px;
+   
   }
+  
   #descargar-cv p {
     margin-top: 20px;
-    width: 80%;
+    width: 90%;
     height: auto;
     align-items: center;
+    text-align: center;
   }
 }
 
@@ -1415,7 +1551,7 @@ footer h3 {
     align-items: center;
     margin-bottom: 10px;
     color: #21ebff;
-    font-size:1.2rem;
+    font-size:1.5rem;
     text-align: center;
     
   }
@@ -1430,6 +1566,7 @@ footer h3 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
   }
 
   .img-teclado {
@@ -1439,20 +1576,22 @@ footer h3 {
   .subtitulo {
     margin: auto;
     width: 50%;
-    margin-top: 15px;
+    margin-top: 35px;
     border-radius: 5px;
-    margin-bottom: 10px;
+
   }
 
   .subtitulo h3 {
     text-align: center;
     font-size: 2.5rem;
     font-weight: bold;
+  
   }
 
   .presentacion {
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 10px;
   }
 
   .intro {
@@ -1461,7 +1600,7 @@ footer h3 {
     height: auto;
     margin-top: 5px;
     background-color: #4645445b;
-    margin-bottom: 25px;
+    margin-bottom: 30px;
     border-radius: 2px;
   }
 
@@ -1470,6 +1609,7 @@ footer h3 {
     height: auto;
     font-size: 2rem;
     color: rgb(255, 255, 255);
+    line-height: 50px;
   }
 
   .header__img {
@@ -1477,7 +1617,7 @@ footer h3 {
     border-radius: 10px;
     width: 50%;
     height: auto;
-    margin-top: 2px;
+    margin-top: 20px;
     filter: none;
   }
 
@@ -1487,29 +1627,30 @@ footer h3 {
   }
 
   #proyectos {
+    height: auto;
     justify-content: center;
+
   }
 
   .proyecto-titulo {
     width: 50%;
-    justify-content: center;
+    justify-content: flex-end;
     border-radius: 5px;
+    margin-bottom: 20px;
+    
   }
 
   .proyecto-titulo h2 {
     color: white;
   }
 
-  .contenedor-card {
+  #carousel {
     width: 100%;
     height: auto;
     flex-wrap: wrap;
     padding: 5px 5px;
     justify-content: center;
-  }
-
-  .card {
-    width: 42%;
+    
   }
 
   #contenedor-skills {
@@ -1538,13 +1679,14 @@ footer h3 {
   #certificados h2 {
     width: 60%;
     margin-top: 50px;
+    margin-bottom: 20px;
     color: #ffffff;
     background-color: rgba(104, 89, 240, 0.651);
   }
 
   .cont {
     width: 100%;
-    height: 55vh;
+    height: 85vh;
     padding: 5px 5px;
   }
 
@@ -1557,7 +1699,7 @@ footer h3 {
     display: flex;
     justify-content: center;
     width: 80%;
-    margin-top: 30px;
+    margin-top: 40px;
   }
   .contacto-tit {
     width: 80%;
@@ -1581,7 +1723,7 @@ footer h3 {
     justify-content: space-around;
     flex-direction: row;
     flex-wrap: nowrap;
-    margin: 15px 0px;
+    margin: 20px 0px;
   }
 
   #descargar-cv p {
@@ -1691,6 +1833,11 @@ footer h3 {
     color: #ffffff;
     background-color: rgba(104, 89, 240, 0.651);
   }
+  .cont{
+    width: 100%;
+    height: 95vh;
+    padding: 2px 2px;
+  }
 
   #contactos {
     width: 100%;
@@ -1701,7 +1848,8 @@ footer h3 {
     display: flex;
     justify-content: center;
     width: 70%;
-    margin-top: 20px;
+    margin-top: 50px;
+    
   }
 
   .contacto-tit {
@@ -1714,22 +1862,44 @@ footer h3 {
   .form-contacto {
     display: block;
     margin: auto;
-    width: 70%;
+    width: 75%;
     height: auto;
     text-align: center;
     font-size: 1.2rem;
     padding: 10px 5px;
     margin-top: 55px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 
   #descargar-cv p {
     font-size: 1.2rem;
-    margin-top: 20px;
+    margin-top: 50px;
     width: 90%;
     height: auto;
     text-align: center;
   }
+}
+
+@media only screen and (min-width: 1201px) and (max-width: 1328px){
+  html,
+  body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
+
+.clock{
+  display: none;
+}
+
+.cont {
+  width: 100%;
+  height: 100vh;
+  padding: 5px 5px;
+}
+
+#contactos {
+  margin-top: 4rem;
+}
 }
 
 /*
